--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "binance",
-  "private": true,
-  "version": "0.0.0",
+  "name": "binance-candlestick-app",
+  "version": "1.0.0",
+  "description": "Binance candlestick chart as an npm package",
+  "main": "dist/index.js",
   "type": "module",
   "scripts": {
     "dev": "vite",
